modsource-817: add new save records method