@@ -11,6 +11,7 @@ import static org.folio.dao.util.RecordDaoUtil.ensureRecordHasId;
 import static org.folio.dao.util.RecordDaoUtil.ensureRecordHasSuppressDiscovery;
 import static org.folio.dao.util.RecordDaoUtil.filterRecordByExternalHridValuesWithQualifier;
 import static org.folio.dao.util.RecordDaoUtil.filterRecordByState;
+import static org.folio.dao.util.RecordDaoUtil.getExternalIdType;
 import static org.folio.dao.util.RecordDaoUtil.getExternalIdsConditionWithQualifier;
 import static org.folio.dao.util.SnapshotDaoUtil.SNAPSHOT_NOT_FOUND_TEMPLATE;
 import static org.folio.dao.util.SnapshotDaoUtil.SNAPSHOT_NOT_STARTED_MESSAGE_TEMPLATE;
@@ -38,10 +39,11 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutionException;
 import javax.ws.rs.BadRequestException;
 import javax.ws.rs.NotFoundException;
 import net.sf.jsqlparser.JSQLParserException;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -73,6 +75,7 @@ import org.folio.rest.jaxrs.model.SourceRecord;
 import org.folio.rest.jaxrs.model.SourceRecordCollection;
 import org.folio.rest.jaxrs.model.StrippedParsedRecordCollection;
 import org.folio.rest.jooq.enums.RecordState;
+import org.folio.services.entities.RecordsModifierOperator;
 import org.folio.services.exceptions.DuplicateRecordException;
 import org.folio.services.exceptions.RecordUpdateException;
 import org.folio.services.util.AdditionalFieldsUtil;
@@ -170,26 +173,50 @@ public class RecordServiceImpl implements RecordService {
 
   @Override
   public Future<RecordsBatchResponse> saveRecords(RecordCollection recordCollection, Map<String, String> okapiHeaders) {
-    return saveRecordsBlocking(recordCollection, false, okapiHeaders);
-  }
-
-  @Override
-  public Future<RecordsBatchResponse> saveRecordsBlocking(RecordCollection recordCollection,
-                                                          boolean orderedBlocking,
-                                                          Map<String, String> okapiHeaders) {
     if (recordCollection.getRecords().isEmpty()) {
       Promise<RecordsBatchResponse> promise = Promise.promise();
       promise.complete(new RecordsBatchResponse().withTotalRecords(0));
       return promise.future();
     }
     List<Future> setMatchedIdsFutures = new ArrayList<>();
-    recordCollection.getRecords().forEach(record -> setMatchedIdsFutures.add(setMatchedIdForRecord(record,
-      okapiHeaders.get(OKAPI_TENANT_HEADER))));
+    recordCollection.getRecords().forEach(sourceRecord ->
+      setMatchedIdsFutures.add(setMatchedIdForRecord(sourceRecord, okapiHeaders.get(OKAPI_TENANT_HEADER))));
     return GenericCompositeFuture.all(setMatchedIdsFutures)
       .compose(ar -> ar.succeeded() ?
-        recordDao.saveRecordsBlocking(recordCollection, orderedBlocking, okapiHeaders)
-        : Future.failedFuture(ar.cause()))
+        recordDao.saveRecords(recordCollection, okapiHeaders) : Future.failedFuture(ar.cause()))
       .recover(RecordServiceImpl::mapToDuplicateExceptionIfNeeded);
+  }
+
+  @Override
+  public Future<RecordsBatchResponse> saveRecordsByExternalIds(List<String> externalIds,
+                                                               RecordType recordType,
+                                                               RecordsModifierOperator recordsModifier,
+                                                               Map<String, String> okapiHeaders) {
+    if (CollectionUtils.isEmpty(externalIds)) {
+      LOG.warn("saveRecordsBlocking:: Skipping the records save, no external IDs are provided");
+      return Future.succeededFuture(new RecordsBatchResponse().withTotalRecords(0));
+    }
+
+    if (recordsModifier == null) {
+      LOG.warn("saveRecordsBlocking:: Skipping the records save, no operator is provided to modify the existing records");
+      return Future.succeededFuture(new RecordsBatchResponse().withTotalRecords(0));
+    }
+
+    RecordsModifierOperator recordsMatchedIdsSetter = recordCollection -> {
+      try {
+        for (var sourceRecord : recordCollection.getRecords()) {
+          setMatchedIdForRecord(sourceRecord, okapiHeaders.get(OKAPI_TENANT_HEADER))
+            .toCompletionStage().toCompletableFuture().get();
+        }
+        return recordCollection;
+      } catch (InterruptedException | ExecutionException ex) {
+        LOG.warn("saveRecordsBlocking:: Failed to set record matched id: {}", ex.getMessage());
+        throw new RecordUpdateException(ex.getMessage());
+      }
+    };
+    RecordsModifierOperator recordsModifierWithMatchedIdsSetter = recordsModifier.andThen(recordsMatchedIdsSetter);
+
+    return recordDao.saveRecordsByExternalIds(externalIds, recordType, recordsModifierWithMatchedIdsSetter, okapiHeaders);
   }
 
   @Override
@@ -387,7 +414,7 @@ public class RecordServiceImpl implements RecordService {
     }
     Promise<Record> promise = Promise.promise();
     String externalId = RecordDaoUtil.getExternalId(record.getExternalIdsHolder(), record.getRecordType());
-    IdType idType = RecordDaoUtil.getExternalIdType(record.getRecordType());
+    IdType idType = getExternalIdType(record.getRecordType());
 
     if (externalId != null && idType != null && record.getState() == Record.State.ACTUAL) {
       setMatchedIdFromExistingSourceRecord(record, tenantId, promise, externalId, idType);
@@ -459,7 +486,7 @@ public class RecordServiceImpl implements RecordService {
             .map(JsonObject.class::cast)
             .filter(field -> checkFieldRange(field, data))
             .map(JsonObject::getMap)
-            .collect(Collectors.toList());
+            .toList();
 
           parsedContent.put("fields", filteredFields);
           recordToFilter.getParsedRecord().setContent(parsedContent.getMap());
