@@ -148,7 +148,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
           .filter(r -> r.getSnapshotId().equals(snapshotId))
           .sorted(comparing(Record::getOrder))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected.get(1), get.result().getRecords().get(0));
         compareRecords(context, expected.get(2), get.result().getRecords().get(1));
@@ -278,7 +278,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
         .filter(r -> r.getSnapshotId().equals(snapshotId))
         .sorted(comparing(Record::getOrder))
-        .collect(Collectors.toList());
+        .toList();
 
       List<Record> actual = new ArrayList<>();
       flowable.doFinally(() -> {
@@ -1495,7 +1495,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         context.assertEquals(limit, get.result().getRecords().size());
         async.complete();
@@ -1525,7 +1525,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
           .filter(r -> r.getRecordType().equals(recordType))
           .filter(r -> r.getSnapshotId().equals(snapshotId))
           .sorted(comparing(Record::getOrder))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected.get(0), get.result().getRecords().get(0));
         async.complete();
@@ -1553,8 +1553,8 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
-          .sorted(comparing(Record::getOrder))
-          .collect(Collectors.toList());
+          //.sorted(comparing(Record::getOrder))
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected, get.result().getRecords());
         async.complete();
@@ -1582,7 +1582,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .filter(r -> r.getRecordType().equals(recordType))
         .filter(r -> r.getSnapshotId().equals(snapshotId))
         .sorted(comparing(Record::getOrder))
-        .collect(Collectors.toList());
+        .toList();
 
       List<Record> actual = new ArrayList<>();
       flowable.doFinally(() -> {
@@ -1686,8 +1686,8 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       }
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
-      expected.sort(comparing(Record::getId));
-      batch.result().getRecords().sort(comparing(Record::getId));
+      //expected.sort(comparing(Record::getId));
+      //batch.result().getRecords().sort(comparing(Record::getId));
       compareRecords(context, expected, batch.result().getRecords());
       RecordDaoUtil.countByCondition(postgresClientFactory.getQueryExecutor(TENANT_ID), DSL.trueCondition())
         .onComplete(count -> {
@@ -1717,8 +1717,8 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       }
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
-      expected.sort(comparing(Record::getId));
-      batch.result().getRecords().sort(comparing(Record::getId));
+      //expected.sort(comparing(Record::getId));
+      //batch.result().getRecords().sort(comparing(Record::getId));
       compareRecords(context, expected, batch.result().getRecords());
       checkRecordErrorRecords(context, batch.result().getRecords(), TestMocks.getErrorRecord(0).getContent().toString(),
         TestMocks.getErrorRecord(0).getDescription());
@@ -1761,9 +1761,9 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+          //.sorted(comparing(SourceRecord::getRecordId))
+          .toList();
+        //get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1790,14 +1790,14 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       List<SourceRecord> expected = records.stream()
         .filter(r -> r.getRecordType().equals(recordType))
         .map(RecordDaoUtil::toSourceRecord)
-        .sorted(comparing(SourceRecord::getRecordId))
-        .sorted(comparing(SourceRecord::getOrder))
-        .collect(Collectors.toList());
+        //.sorted(comparing(SourceRecord::getRecordId))
+        //.sorted(comparing(SourceRecord::getOrder))
+        .toList();
 
       List<SourceRecord> actual = new ArrayList<>();
       flowable.doFinally(() -> {
 
-          actual.sort(comparing(SourceRecord::getRecordId));
+          //actual.sort(comparing(SourceRecord::getRecordId));
           context.assertEquals(expected.size(), actual.size());
           compareSourceRecords(context, expected, actual);
 
@@ -1831,9 +1831,9 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        sortByRecordId(get);
+          //.sorted(comparing(SourceRecord::getRecordId))
+          .toList();
+        //sortByRecordId(get);
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1867,9 +1867,9 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+          //.sorted(comparing(SourceRecord::getRecordId))
+          .toList();
+        //get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1922,9 +1922,9 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
+          //.sorted(comparing(SourceRecord::getRecordId))
           .collect(Collectors.toList());
-        get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+        //get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1996,8 +1996,8 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         context.assertEquals(0, update.result().getErrorMessages().size());
         context.assertEquals(expected.size(), update.result().getTotalRecords());
-        expected.sort(comparing(ParsedRecord::getId));
-        update.result().getParsedRecords().sort(comparing(ParsedRecord::getId));
+        //expected.sort(comparing(ParsedRecord::getId));
+        //update.result().getParsedRecords().sort(comparing(ParsedRecord::getId));
         compareParsedRecords(context, expected, update.result().getParsedRecords());
         GenericCompositeFuture.all(updated.stream().map(record -> recordDao
           .getRecordByMatchedId(record.getMatchedId(), TENANT_ID)
@@ -2146,7 +2146,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
   private void compareRecords(TestContext context, List<Record> expected, List<Record> actual) {
     context.assertEquals(expected.size(), actual.size());
     for (Record record : expected) {
-      compareRecords(context, record, record);
+      var actualRecord = actual.stream()
+        .filter(r -> Objects.equals(r.getId(), record.getId()))
+        .findFirst();
+      if (actualRecord.isPresent()) {
+        compareRecords(context, record, actualRecord.get());
+      }
     }
   }
 
@@ -2211,7 +2216,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
   private void compareSourceRecords(TestContext context, List<SourceRecord> expected, List<SourceRecord> actual) {
     context.assertEquals(expected.size(), actual.size());
     for (SourceRecord sourceRecord : expected) {
-      compareSourceRecords(context, sourceRecord, sourceRecord);
+      var sourceRecordActual = actual.stream()
+        .filter(sr -> Objects.equals(sr.getRecordId(), sourceRecord.getRecordId()))
+        .findFirst();
+      if (sourceRecordActual.isPresent()) {
+        compareSourceRecords(context, sourceRecord, sourceRecordActual.get());
+      }
     }
   }
 
@@ -2244,7 +2254,10 @@ public class RecordServiceTest extends AbstractLBServiceTest {
   private void compareParsedRecords(TestContext context, List<ParsedRecord> expected, List<ParsedRecord> actual) {
     context.assertEquals(expected.size(), actual.size());
     for (ParsedRecord parsedRecord : expected) {
-      compareParsedRecords(context, parsedRecord, parsedRecord);
+      var actualParsedRecord = actual.stream().filter(a -> Objects.equals(a.getId(), parsedRecord.getId())).findFirst();
+      if (actualParsedRecord.isPresent()) {
+        compareParsedRecords(context, parsedRecord, actualParsedRecord.get());
+      }
     }
   }
 
